deployment.yml
apiVersion: v1
kind: Service
metadata:
  namespace: apps
  name: nginx
  labels:
    app: nginx
    service: nginx
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: apps
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
