virtual_service.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-route
spec:
  hosts:
    - "*"
  gateways:
    - nginx-gateway
  http:
    - name: "nginx-route"
      route:
        - destination:
            host: nginx.apps.svc.cluster.local
            port:
              number: 80
