authz_rule.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "frontend-ingress"
  namespace: apps
spec:
  action: DENY
  rules:
    - from:
        - source:
            notRequestPrincipals: ["*"]
